# F1_Simulator_OpenENV

./: .dockerignore  .env.example  .gitattributes  .gitignore  AUDIT_NOTES.md  CLAUDE.md  COMMANDS.md  DEPLOY_SPACE.md  Dockerfile  GPU_HANDOFF.md  LICENSE  PRE_PUSH_CHECKLIST.md  README.md  STATE.md  SUBMISSION_RUNBOOK.md  TODO.md  TRAINING.md  VERIFY_AND_DEPLOY.md  blog.md  capture_everything.py  client.py  evaluate.py  inference.py  model_card.md  models.py  openenv.yaml  push_to_space.py  pyproject.toml  rollout.py  simulator-integration.md  train.py  train_sft_v1.py  working_vllm_env_before_unsloth.txt
baselines/: README.md  __init__.py  expert_solver.py
captures/: README.md
data/: README.md  opponent_pace_calibration.json  track_metadata.json  tyre_compound_baseline.json
demo-assets/: README.md  blog-hf-ready.md  blog-post.md  hf-blog-link.txt  hf-space-link.txt  trained-rollout-transcript.txt  video-script.md  youtube-link.txt
docs/: architecture.md  build-order.md  person1-tasks.md  person2-tasks.md  physics-model.md  reward-model.md  scenarios.md
grpo_v1/: README.md  adapter_config.json  policy_config.json  tokenizer_config.json
notebooks/: README.md  f1_strategist_training_colab.ipynb
results/: DEMO_PIPELINE_SUMMARY.md  FINAL_RESULTS.md  README.md  ablation.md  ablation_no_memory.json  eval_grpo_v2.json  eval_grpo_v2_t03.json  eval_iter0.json  eval_rft_t03.json  eval_rft_v1.json  eval_sft.json  eval_sft_v2.json  eval_sft_v2_matched.json  eval_sft_v3.json  eval_sft_v4.json  eval_shashwat.json  eval_shashwat_origfmt.json  eval_six_scenarios.json  eval_summary.json  expert_dry_rollout.jsonl  inference_smoke.jsonl  pretrain_baseline.json  pretrain_baseline.md
scripts/: README.md  add_llm_entries.py  build_historical_replay.py  build_rft_dataset.py  calibrate_opponent_pace.py  calibrate_tyre_baseline.py  capture_pretrain_baseline.py  (+17 more)
(+139 files in other folders)
