[project]
name = "f1-strategist"
version = "1.0.0"
description = "LLM race-strategy OpenEnv environment for the Meta PyTorch Hackathon Grand Finale 2026"
authors = [
    { name = "Shashwat Rajan" },
    { name = "Tanish Shitanshu" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "openenv-core>=0.2.3",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
train = [
    "trl==0.14.0",
    "transformers>=4.55.4",
    "peft>=0.13.2",
    "datasets>=3.2.0",
    "accelerate>=1.3",
    "liger-kernel<0.6",
    "bitsandbytes>=0.49",
    "protobuf",
]
inference = [
    "transformers>=4.55.4",
    "torch>=2.4.0",
    "sentencepiece",
]
eval = [
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
    "tqdm>=4.66.0",
]
demo = [
    "gradio>=4.0.0",
    "pillow>=10.0.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "httpx>=0.25.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
Homepage = "https://github.com/Deltasthicc/f1-strategist"
Space = "https://huggingface.co/spaces/Deltasthic/f1-strategist"
Repository = "https://github.com/Deltasthicc/f1-strategist"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["models", "client", "inference", "train", "evaluate", "rollout", "capture_everything"]

[tool.setuptools.packages.find]
include = ["server*", "baselines*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
